<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:backgroundTint="?attr/colorPrimarySurface"
    app:cardCornerRadius="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/which_screen_should_i_install_this_wallpaper_on"
            android:textColor="?attr/colorSecondary"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_set_lock_screen"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/main_screen"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_set_main_screen"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/lock_screen"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/btn_set_lock_screen" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/gray_t_1"
            android:text="@string/cancel"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/btn_set_main_screen" />

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>