<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.fullscreen_photo.FullscreenPhotoFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_loading"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/clear_glass"
        app:layout_constraintBottom_toBottomOf="@id/photo"
        app:layout_constraintEnd_toEndOf="@id/photo"
        app:layout_constraintStart_toStartOf="@id/photo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn_add_favorite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:contentDescription="@string/add_favorite_icon"
                android:scaleType="fitXY"
                android:src="@drawable/baseline_favorite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_set_wallpaper"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/gray_t_2"
                android:text="@string/set_to_wallpaper"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_download"
                app:layout_constraintStart_toEndOf="@id/btn_add_favorite"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_download"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:contentDescription="@string/download_icon"
                android:scaleType="fitXY"
                android:src="@drawable/baseline_file_download_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>